Fixed bug #28444 (Cannot access undefined property for object with overloaded property access).